# SDL_Pacman

./: CMakeLists.txt  README.md  files.c  files.h  ghosts.c  ghosts.h  main.c  map.txt  playground.txt  points.c  points.h  screens.c  screens.h  structs.h  toDo  walls.c  walls.h
